sprint19: search bar and header z-index fix

--- a/src/app/common/header/header.component.css
+++ b/src/app/common/header/header.component.css
@@ -91,6 +91,7 @@ header{
 }
 .fixedHeader{
     background-color: #000;
+    z-index: 9999;
 }
 .searchHeading .nav-item a:before{
     content: '';
